[package]
name = "snip"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
arboard = { version = "3", optional = true }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
directories = "5"
rusqlite = { version = "0.31", features = ["bundled", "unlock_notify", "functions", "vtab"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
walkdir = "2"
copypasta = "0.8"  # <-- add this line

[features]
# Enable clipboard copy with: `--features clipboard`
clipboard = ["arboard"]


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
